chore: migrate to java 11 and harden daily digest delivery